# streaming_bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  oncreate.zsh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/config/: settings.py
backend/src/controllers/: chat_controller.py
backend/src/schemas/: chat.py
backend/src/services/: kernel_service.py  llm_service.py
backend/src/utils/: errors.py  logging.py
docs/: streaming-api.md  ui-streaming.md
planning/: plan.md
specs/: features.md
src/config/: settings.py
src/utils/: logging.py
webapp/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  styles.css
webapp/src/components/: ChatInput.tsx  MessageList.tsx
webapp/src/lib/: streamClient.ts  time.ts
webapp/src/types/: chat.ts
