[tool.poetry]
name = "streaming-bot"
version = "0.1.0"
description = "Streaming chatbot demo with FastAPI, Azure OpenAI, and Semantic Kernel"
authors = ["pragmatical <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.112.2"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

# Semantic Kernel and OpenAI SDK will be added in a later step

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
